--- a/systems/martingale/martingale.vcxproj.filters
+++ b/systems/martingale/martingale.vcxproj.filters
@@ -65,6 +65,15 @@
     <ClCompile Include="..\..\temp\GeneratedFiles\Release\martingale\moc_systeminterface.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
+    <ClCompile Include="martingalestatisticswidget.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\temp\GeneratedFiles\Debug\martingale\moc_martingalestatisticswidget.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\temp\GeneratedFiles\Release\martingale\moc_martingalestatisticswidget.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\common\systemsettings.h">
@@ -82,6 +91,9 @@
     <ClInclude Include="martingalesettings.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\temp\GeneratedFiles\martingale\ui_martingalestatisticswidget.h">
+      <Filter>Generated Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="martingale.h">
@@ -94,6 +106,12 @@
       <Filter>Header Files</Filter>
     </CustomBuild>
     <CustomBuild Include="..\common\systeminterface.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="martingalestatisticswidget.ui">
+      <Filter>Form Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="martingalestatisticswidget.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
   </ItemGroup>
